--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.19.0",
     "cheerio": "^1.0.0-rc.3",
     "gm": "^1.23.1",
+    "image-downloader": "^3.5.0",
     "text2png": "^2.3.0"
   }
 }
