--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "cheerio": "^1.0.0-rc.3",
     "gm": "^1.23.1",
     "image-downloader": "^3.5.0",
-    "text2png": "^2.3.0"
+    "music-tempo": "^1.0.3",
+    "text2png": "^2.3.0",
+    "web-audio-api": "^0.2.2"
   }
 }
