--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
   },
   "homepage": "https://github.com/Giancarl021/Little-Message-Generator#readme",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.0.20",
+    "@ffprobe-installer/ffprobe": "^1.0.12",
     "axios": "^0.19.0",
     "cheerio": "^1.0.0-rc.3",
+    "fluent-ffmpeg": "^2.1.2",
     "gm": "^1.23.1",
     "image-downloader": "^3.5.0",
-    "text2png": "^2.3.0"
+    "text2png": "^2.3.0",
+    "videoshow": "^0.1.11"
   }
 }
