--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.19.0",
     "cheerio": "^1.0.0-rc.3",
     "fluent-ffmpeg": "^2.1.2",
+    "get-audio-duration": "^1.0.0",
     "gm": "^1.23.1",
     "image-downloader": "^3.5.0",
     "image-size": "^0.8.3",
